--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -1,10 +1,11 @@
 @import edu.harvard.iq.policymodels.externaltexts.TrivialLocalization
-@(qKit: VersionKit, interviewWelcomeMessage:Option[String])(implicit req:Request[_], msgs:MessagesProvider)
+@(qKit: VersionKit, interviewWelcomeMessage:Option[String]
+)(implicit req:Request[_], msgs:MessagesProvider, pcd:models.PageCustomizationData)
 
 @scripts = {
   <script type="text/javascript" src="@routes.Assets.versioned("js/InterviewIntro.js")"></script>
 }
-@templates.bsNavBar("Interview Start Page", Symbol("tag"), scripts) {
+@templates.publicPages("Interview Start Page", views.PublicSection.Interview, scripts) {
   <div class="row my-2">
     <div class="col">
       <a href="@routes.Application.showModel(qKit.md.id.modelId)"><i class="fa fa-list"></i> Model Versions</a>
