--- a/datatags-app/app/views/modelCatalog.scala.html
+++ b/datatags-app/app/views/modelCatalog.scala.html
@@ -1,6 +1,8 @@
-@(models: Seq[Model])(implicit req:Request[_])
+@import models.PageCustomizationData
+@(models:Seq[Model]
+)(implicit req:Request[_], msgs:MessagesProvider, pcd:PageCustomizationData)
 
-@templates.bsNavBar("PolicyModels: Server Catalog", Symbol("frontEnd")) {
+@templates.publicPages("PolicyModels: Server Catalog", views.PublicSection.Models) {
   <div class="container" id="content">
     <div class="row">
       <div class="col-md-12">
