--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -41,6 +41,12 @@
       <div class="commitTag">
         Commit: @comps.buildTag()
       </div>
+      <hr>
+      <ul>
+        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
+      </ul>
     </div>
   </footer>   
     <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
