--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -1,4 +1,4 @@
-@(title:String, scripts: Html=Html(""), extraHead: Html=Html(""))(top:Html=Html(""))(content:Html)
+@(title:String, scripts: Html=Html(""), extraHead: Html=Html(""), pcd:Option[PageCustomizationData]=None)(top:Html=Html(""))(content:Html)
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,32 +23,7 @@
   <div class="container" id="content">
     @content
   </div>
-  <footer>
-    <div class="container">
-      <div class="pre-release-warn">
-        <i class="fa fa-warning fa-lg"></i> Do not use interview results as a legal recommendation.
-      </div>
-      <ul class="list-inline">
-        <li class="list-inline-item">PolicyModels/DataTags project: <a href="http://datatags.org">datatags.org</a>.<br>
-            &copy; 2019 by the President and Fellows of Harvard College.</li>
-        <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="National Science Foundation" href="http://nsf.gov" target="_blank"><img src="/assets/images/nsf-logo-small.png" alt="NSF logo" /></a></li>
-        <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="The Dataverse Project" href="http://thedata.org" target="_blank"><img src="/assets/images/dvn-logo-small.png" alt="Dataverse logo" /></a></li>
-        <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="Data Privacy Lab, IQSS at Harvard University" href="http://dataprivacylab.org/" target="_blank"><img src="/assets/images/dpl-logo-small.png" alt="Data Privacy Lab logo" /></a></li>
-        @*<li><a data-toggle="tooltip" data-placement="top" title="Berkman Center for Internet and Society at Harvard University" href="http://cyber.law.harvard.edu/" target="_blank"><img src="/assets/images/berkman-logo-small.png" alt="Berkman Center logo" /></a></li>*@
-        <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="Privacy Tools for Sharing Research Data, at Harvard School of Engineering and Applied Sciences" href="http://privacytools.seas.harvard.edu" target="_blank"><img src="/assets/images/seas-logo-small.png" alt="Harvard SEAS logo" /></a></li>
-        <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="The Institute for Quantitative Social Science at Harvard University" href="http://iq.harvard.edu" target="_blank"><img src="/assets/images/iqss-logo-small.png" alt="IQSS logo" /></a></li>
-      </ul>
-      <div class="commitTag">
-        Commit: @comps.buildTag()
-      </div>
-      <hr>
-      <ul>
-        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
-      </ul>
-    </div>
-  </footer>   
+    @footer(pcd)
     <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/popper.js/umd/popper.js")"></script>
     <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")"></script>
@@ -65,5 +40,6 @@
       $("span[data-toggle='tooltip']").tooltip(); 
     } );
   </script>
+  @for( analyticsCode <- pcd.map(_.analyticsCode)){@Html(analyticsCode)}
   </body>
 </html>
