--- a/datatags-app/app/views/backoffice/modelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/modelViewer.scala.html
@@ -19,7 +19,7 @@
   <script src="@routes.Assets.versioned("js/DeleteVersion.js")"></script>
 }
 
-@templates.backend("Model Editor", views.BackOfficeSections.Models, scripts ) {
+@templates.backend("Model Editor", views.BackOfficeSection.Models, scripts ) {
 
   <div class="row my-2 d-flex flex-row">
     <div class="col flex-grow-1">
