--- a/datatags-app/app/views/public/aboutServer.scala.html
+++ b/datatags-app/app/views/public/aboutServer.scala.html
@@ -69,7 +69,7 @@
         <li><a href="https://ucsd.edu"><span><img src="@routes.Assets.versioned("images/logos/UCSD.png")" alt="logo"></span>University of California - San Diego</a></li>
         <li><a href="https://dknet.org/"><span><img src="@routes.Assets.versioned("images/logos/dkNet.png")" alt="logo"></span>dkNet / National Institute of Diabetes Digestive and Kidney Disease (NIDDK)</a></li>
         <li><a href="https://innovationisrael.org.il/en/"><span><img src="@routes.Assets.versioned("images/logos/iia.png")" alt="logo"></span>Israel Innovation Authority, Government Innovation Track</a></li>
-        <li><a href="https://www.kavlaoved.org.il/"><span><img src="@routes.Assets.versioned("images/logos/kavlaoved.png")" alt="logo"></span>Kav Laoved</a></li>
+        <li><a href="https://www.kavlaoved.org.il/"><span><img src="@routes.Assets.versioned("images/logos/kavlaoved.png")" alt="logo"></span>Kav Laoved, Worker's Hot Line NGO</a></li>
       </ul>
 
       <h2 class="mt-4">Code</h2>
