--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -11,6 +11,11 @@ h1, h2, h3 {
 .mt-1 {
   margin-top: 1em;
 }
+
+.bg-light-transparent {
+  background-color: rgba(255,255,255,.6);
+}
+
 .disabled {
   pointer-events: none;
   cursor: default;
@@ -527,7 +532,7 @@ footer {
   direction: ltr;
   margin-top: 2em;
   padding: 2em 0;
-  background-color: #E8E8E8;
+  background-color: rgba(219, 219, 219, 0.6);
   font-size: 0.8em;
   border-top: 1px solid #888;
   color: #888;
