--- a/datatags-app/app/views/backoffice/modelList.scala.html
+++ b/datatags-app/app/views/backoffice/modelList.scala.html
@@ -8,7 +8,7 @@
     });
   </script>
 }
-@templates.backend("Model Editor", views.BackOfficeSections.Models, scripts ) {
+@templates.backend("Model Editor", views.BackOfficeSection.Models, scripts ) {
   @comps.pageTitleRow("Models"){
     <a href="@routes.ModelCtrl.showNewModelPage()" class="btn btn-large btn-secondary"><i class="fa fa-plus-circle"></i> Add</a>
   }
