--- a/datatags-app/app/views/backoffice/users/userList.scala.html
+++ b/datatags-app/app/views/backoffice/users/userList.scala.html
@@ -1,5 +1,5 @@
 @(users:Seq[User], curUser:User)(implicit request: RequestHeader, msgs: MessagesProvider)
-@templates.backend("Users", views.BackOfficeSections.Users ) {
+@templates.backend("Users", views.BackOfficeSection.Users ) {
   <div class="row">
     <div class="col-md-12">
       <h1>
