--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -1,5 +1,5 @@
 @import views._
-@(title:String, currentSection:BackOfficeSections.Value, scripts: Html=Html(""), extraHead: Html=Html(""))(content:Html)(implicit request: RequestHeader, msgs:MessagesProvider)
+@(title:String, currentSection:BackOfficeSection.Value, scripts: Html=Html(""), extraHead: Html=Html(""))(content:Html)(implicit request: RequestHeader, msgs:MessagesProvider)
 
 @headPart = {
 	@extraHead
