--- a/datatags-app/app/views/interview/allQuestions.scala.html
+++ b/datatags-app/app/views/interview/allQuestions.scala.html
@@ -87,7 +87,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <a href="@routes.InterviewCtrl.interviewIntro(verKit.md.id.modelId, verKit.md.id.version)">@comps.backArrow(loc) @Messages("interview.back")</a>
+      <a href="@routes.InterviewCtrl.showStartInterview(verKit.md.id.modelId, verKit.md.id.version, Some(loc.getLanguage))">@comps.backArrow(loc) @Messages("interview.back")</a>
     </div>
   </div>
   <div class="row">
