--- a/datatags-app/app/views/comps/changeLanguageMenu.scala.html
+++ b/datatags-app/app/views/comps/changeLanguageMenu.scala.html
@@ -1,11 +1,13 @@
 @import edu.harvard.iq.policymodels.externaltexts.Localization
 @(curLoc:Localization, availableLangs:Seq[String], destGen:String=>Call)
 @if(availableLangs.size > 1) {
-  <i class="fa fa-language"></i>&nbsp;
-  <select class="custom-select custom-select-sm" style="width:auto" name="locSelect" id="locSelect" onchange="window.location.href = this.value">
-  @for(lang <- availableLangs) {
-    <option value="@destGen(lang)"
-    @if(curLoc.getLanguage == lang) {selected}>@lang </option>
-  }
-  </select>
+  <div class="l10nMenu">
+    <i class="fa fa-language flex-grow-0"></i>&nbsp;
+    <select class="flex-grow-1 custom-select custom-select-sm" name="locSelect" id="locSelect" onchange="window.location.href = this.value">
+    @for(lang <- availableLangs) {
+      <option value="@destGen(lang)"
+      @if(curLoc.getLanguage == lang) {selected}>@lang </option>
+    }
+    </select>
+  </div>
 }
