--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -59,7 +59,7 @@
           </form>
         }
         case None => {
-          <a href="@routes.InterviewCtrl.interviewIntro(session.kit.md.id.modelId, session.kit.md.id.version)" class="btn btn-primary">@Messages("interview.startAgain")</a>
+          <a href="@routes.InterviewCtrl.showStartInterview(session.kit.md.id.modelId, session.kit.md.id.version)" class="btn btn-primary">@Messages("interview.startAgain")</a>
         }
       }
     </div>
