Updated heb localization, minor UI tweaks

--- a/datatags-app/app/views/interview/allQuestions.scala.html
+++ b/datatags-app/app/views/interview/allQuestions.scala.html
@@ -76,7 +76,7 @@
 }
 
 
-@templates.publicPages(Messages("interview.questions")+":" + verKit.policyModel.get.getMetadata.getVersion, views.PublicSection.Models, extraHead = extraHead ) {
+@templates.publicPages(Messages("interview.questions")+":" + verKit.policyModel.get.getMetadata.getVersion, views.PublicSection.Interview, extraHead = extraHead ) {
   <div class="row">
     <div class="col">
       <div class="d-flex justify-content-end align-items-baseline">
