--- a/datatags-app/app/views/templates/footer.scala.html
+++ b/datatags-app/app/views/templates/footer.scala.html
@@ -18,8 +18,8 @@
       }
       <div class="col text-right">
         <a class="footerLink" data-toggle="tooltip" data-placement="top" title="The Institute for Quantitative Social Science at Harvard University" href="http://iq.harvard.edu" target="_blank"><span class="iqssSprite">&nbsp;</span></a>
-        <a class="footerLink" data-toggle="tooltip" data-placement="top" href="https://github.com/IQSS/DataTags/" title="PolicyModels Language at GitHub" target="_blank"><i class="fa fa-github-alt"></i><sub>lang</sub></a>
-        <a class="footerLink" data-toggle="tooltip" data-placement="top" href="https://github.com/IQSS/DataTaggingServer/" title="PolicyModels Server at GitHub" target="_blank"><i class="fa fa-github-alt"></i><sub>srv</sub></a>
+        <a class="footerLink" data-toggle="tooltip" data-placement="top" href="https://github.com/IQSS/DataTags/" title="PolicyModels Language at GitHub" target="_blank"><i class="fa fa-github"></i><sub>lang</sub></a>
+        <a class="footerLink" data-toggle="tooltip" data-placement="top" href="https://github.com/IQSS/DataTaggingServer/" title="PolicyModels Server at GitHub" target="_blank"><i class="fa fa-github"></i><sub>srv</sub></a>
         Powered by <img src="@routes.Assets.versioned("images/pomo_logo.svg")" height="40px" alt="PolicyModels logo" />
       </div>
     </div>
