Various UI tweaks
Customization editors support links
Improved favicon connectivity
Default logo works in Prod too

--- a/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
@@ -59,13 +59,13 @@
       <div class="form-group row">
         <label for="textColor" class="col-sm-5">@Messages("customization.styling.textColor")</label>
         <div class="col-sm-7">
-          <input type="color" data-selector="body" data-key="color" name="textColor" id="textColor" value="">
+          <input type="color" data-selector="body" data-key="color" name="textColor" id="textColor">
         </div>
       </div>
       <div class="form-group row">
         <label for="aTextColor" class="col-sm-5">@Messages("customization.styling.aTextColor")</label>
         <div class="col-sm-7">
-          <input type="color" data-selector="a" data-key="color" name="aTextColor" id="aTextColor" value="">
+          <input type="color" data-selector="a" data-key="color" name="aTextColor" id="aTextColor">
         </div>
       </div>
     </div>
@@ -74,13 +74,13 @@
       <div class="form-group row">
         <label for="hTextColor" class="col-sm-5">@Messages("customization.styling.hTextColor")</label>
         <div class="col-sm-7">
-          <input type="color" data-selector="h1,h2,h3,h4,h5,h6" data-key="color" name="hTextColor" id="hTextColor" value="">
+          <input type="color" data-selector="h1,h2,h3,h4,h5,h6" data-key="color" name="hTextColor" id="hTextColor">
         </div>
       </div>
       <div class="form-group row">
         <label for="backgroundColor" class="col-sm-5">@Messages("customization.styling.backgroundColor")</label>
         <div class="col-sm-7">
-          <input type="color" data-selector="body" data-key="background-color" name="backgroundColor" id="backgroundColor" value="">
+          <input type="color" data-selector="body" data-key="background-color" name="backgroundColor" id="backgroundColor">
         </div>
       </div>
     </div>
