fixed a bug where the extra texts page would crash. Also, footer text supports HTML

--- a/datatags-app/app/views/templates/footer.scala.html
+++ b/datatags-app/app/views/templates/footer.scala.html
@@ -13,7 +13,7 @@
     <div class="row my-2">
       @for( ft <- pcd.flatMap(_.footer)) {
         <div class="col-sm text-left">
-          @ft
+          @Html(ft)
         </div>
       }
       <div class="col text-right">
