--- a/datatags-app/app/views/backoffice/customizations/extraTextsCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/extraTextsCustomization.scala.html
@@ -27,11 +27,6 @@
           <small>@Messages("customizations.texts.statement.help")</small>
         </div>
         <div class="form-group">
-          <label for="fldStatement">@Messages("customizations.texts.footerText.label")</label>
-          <input type="text" class="form-control" id="fldFooterText" value="@map.getOrElse(SettingKey.FOOTER_TEXT,"")">
-          <small>@Messages("customizations.texts.footerText.help")</small>
-        </div>
-        <div class="form-group">
           <label for="fldStatement">@Messages("customizations.texts.aboutProject.label")</label>
           <input type="text" class="form-control" id="fldAboutLabel" value="@map.getOrElse(SettingKey.PROJECT_NAVBAR_TEXT,"")">
           <small>@Messages("customizations.texts.aboutProject.help")</small>
@@ -48,6 +43,12 @@
             </div>
           </div>
           <small>@Messages("customizations.texts.projectUrl.help")</small>
+        </div>
+        <div class="form-group">
+          <label for="fldStatement">@Messages("customizations.texts.footerText.label")</label>
+@*          <input type="text" class="form-control" id="fldFooterText" value="@map.getOrElse(SettingKey.FOOTER_TEXT,"")">*@
+          <textarea class="form-control" rows="5" id="fldFooterText">@Html(map.getOrElse(SettingKey.FOOTER_TEXT,""))</textarea>
+          <small>@Messages("customizations.texts.footerText.help")</small>
         </div>
       </form>
     </div>
