--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -898,11 +898,11 @@ details:open {
 
   h1 {
     flex-grow: 1;
-    flex-shrink: 0.5;
+    flex-shrink: 0;
   }
   .pageTitleRow-component{
-    flex-grow: 1;
-    flex-shrink: 1;
+    flex-grow: 0;
+    flex-shrink: 0;
     text-align: end;
     .btn {
       vertical-align: text-top;
@@ -917,6 +917,23 @@ details:open {
     flex-shrink: 0;
     font-size: 0.9em;
     color: #446;
+  }
+}
+
+@media( max-width: 400px ) {
+  .pageTitleRow-ctnr {
+    flex-direction: column;
+    h1 {
+      order: 1;
+    }
+    .pageTitleRow-subtitle {
+      order: 2;
+    }
+    .pageTitleRow-component {
+      margin: .5em 0;
+      order: 3;
+      text-align: center;
+    }
   }
 }
 
